# dj-library-manager

./: .gitignore  Cargo.toml  README.md  bitrate_analysis_detailed.csv  bitrate_analysis_summary.csv  bitrate_report.csv  test
.VSCodeCounter/2025-02-14_23-15-45/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
src/: lib.rs  main.rs
src/analyzers/: bitrate.rs  duplicate.rs  mod.rs
src/audio/: metadata.rs  mod.rs
src/cli/: commands.rs
src/utils/: file_ops.rs  mod.rs  parallel.rs  reporting.rs
