[package]
name = "bitrate_analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
symphonia = { version = "0.5", features = ["mp3", "wav", "flac"] }
walkdir = "2.4"
csv = "1.3"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
num_cpus = "1.16"
regex = "1.10"

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.8"